2009-04-29 fixed for HT resize check 32bits overflow
2009-04-29 Check for fork() failure in background saving
2009-04-29 fix for the LZF off-by-one bug added
2009-04-28 print bytes used at exit on SHUTDOWN
2009-04-28 SMOVE test added
2009-04-28 SMOVE command implemented
2009-04-28 less CPU usage in command parsing, case insensitive config directives
2009-04-28 GETSET command doc added
2009-04-28 GETSET tests
2009-04-28 GETSET implemented
2009-04-27 ability to specify a different file name for the DB
2009-04-27 log file parsing code improved a bit
2009-04-27 bgsave_in_progress field in INFO output
2009-04-27 INCRBY/DECRBY now support 64bit increments, with tests
2009-04-23 RANDOMKEY regression test added
2009-04-23 dictGetRandomKey bug fixed, RANDOMKEY will not block the server anymore
2009-04-22 FLUSHALL/FLUSHDB no longer sync on disk. Just increment the dirty counter by the number of elements removed, that will probably trigger a background saving operation
2009-04-21 forgot to comment testing code in PHP lib. Now it is ok
2009-04-21 PHP client ported to PHP5 and fixed
2009-04-21 doc update
2009-04-20 Non blocking replication (finally!). C-side linked lists API improved.
2009-04-19 SUNION, SUNIONSTORE, Initial work on non blocking replication
2009-04-10 Redis 0.091 released
2009-04-10 SINTER/SINTERSTORE/SLEMENTS fix: misisng keys are now not errors, but just like empty sets
2009-04-09 doc changes
2009-04-08 TODO changes, minor change to default redis.conf
2009-04-08 html doc updated
2009-04-08 library clients update scripts
2009-04-08 Ruby client updated
2009-04-08 Lua client updated
2009-04-08 Changelog updated
2009-04-08 Merge git://github.com/ludoo/redis
2009-04-08 add expire command to the php lib
2009-04-08 fix decode bug, add flush and info commands
2009-04-07 Rearrange redisObject struct to reduce memory usage in 64bit environments (as recommended http://groups.google.com/group/redis-db/msg/68f5a743f8f4e287)
2009-04-07 ruby19 compat: use each_line on string